[package]
name = "grades-frontend"
version = "0.1.0"
authors = ["Lukáš Hozda <luk.hozda@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]


[dependencies]
seed = "^0.5.1"
wasm-bindgen = "^0.2.50"

[dependencies.uuid]
version = "*"
features = ["serde"]

[dependencies.chrono]
version = "*"
features = ["serde"]
serde = version = "1"


futures = "^0.1.26"


[dev-dependencies]
wasm-bindgen-test = "0.2.50" # NOTE: keep in sync with wasm-bindgen version


[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'
